terraform/compute.tf
data "aws_ami" "amazon_linux_2023" {
  most_recent = true
  owners      = ["amazon"]

  filter {
    name   = "name"
    values = ["al2023-ami-2023.*-x86_64"]
  }
}

resource "aws_iam_role" "instance_role" {
  name = "portfolio-instance-role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = "sts:AssumeRole"
        Effect = "Allow"
        Principal = {
          Service = "ec2.amazonaws.com"
        }
      }
    ]
  })
}

resource "aws_iam_role_policy_attachment" "ssm_policy" {
  role       = aws_iam_role.instance_role.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"
}

resource "aws_iam_role_policy_attachment" "s3_policy" {
  role       = aws_iam_role.instance_role.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess"
}

resource "aws_iam_instance_profile" "instance_profile" {
  name = "portfolio-instance-profile"
  role = aws_iam_role.instance_role.name
}

resource "aws_instance" "web" {
  ami           = data.aws_ami.amazon_linux_2023.id
  instance_type = "t3.micro"

  subnet_id              = aws_subnet.private_a.id
  vpc_security_group_ids = [aws_security_group.web_sg.id]
  iam_instance_profile   = aws_iam_instance_profile.instance_profile.name

  user_data = <<-EOF
                #!/bin/bash
                sudo yum install nginx -y
                systemctl start nginx.service
                systemctl enable nginx.service
                rm -rf /usr/share/nginx/html/*
                aws s3 cp s3://portfolio-prj-artifact-bucket/artifacts/site.zip /tmp/site.zip
                unzip /tmp/site.zip -d /usr/share/nginx/html/
                systemctl restart nginx.service
                EOF

  tags = {
    Name    = "portfolio-web-instance"
    Project = "portfolio"
  }
}

resource "aws_lb_target_group_attachment" "web_attachment" {
  target_group_arn = aws_lb_target_group.front_end.arn
  target_id        = aws_instance.web.id
  port             = 80
}
